--- a/styles-for-banner-section.css
+++ b/styles-for-banner-section.css
@@ -87,6 +87,7 @@ input{
         box-sizing: border-box;
         max-width: 669.19px;
         border-radius: 4px;
+        background-color: #fff;
     }
     .nav-search-bar-input{
         display: flex;
@@ -122,13 +123,29 @@ input{
         border: none;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
+        cursor: pointer;
     }
-    #color-black input{
+    
+    .color-black ::placeholder{
         color: #000;
     }
     .color-black input{
         border: none;
+        border-left: #ffffff solid 0.5px;
         border-radius: 0;
+        padding-left: 14px;
+    }
+    .color-black::before{
+        content: "";
+        height: 0px;
+        background-color: rgba(235, 235, 235, 1);
+        /* width: 1px; */
+        margin-top: 10px;
+        z-index: 3;
+        height: 25px;
+        border: 1px rgba(235, 235, 235, 1) solid;
+        margin-left: -1px;
+        /* box-sizing: border-box; */
     }
     .bussiness-login{
         display: inline-block;
@@ -143,7 +160,7 @@ input{
     min-width: 0;
    }
    .business-item{
-    padding: 8px;
+        padding: 8px;
         margin-right: 15px;
         margin-left: 2px;
         display: inline;
